--- a/homepage/index.html
+++ b/homepage/index.html
@@ -17,7 +17,7 @@ Date:
           <table>
             <tr>
               <td><a href="index.html">Home</a></td>
-              <td><a href="cv.html">CV</a></td>
+              <td><a href="cv.html">Contact</a></td>
               <td><a href="contact.html">Contact</a></td>
             </tr>
           </table>
