--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -9,7 +9,7 @@ Date:
     <title>Edit this to set page title</title>
   </head>
   <body>
-    <h2>Contact Us</h2>
+    <h2>Contact Me</h2>
     <form action="mailto:youremail@example.com" method="post" enctype="text/plain">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name" placeholder="Your Name" required><br><br>
